Updated to Ver. α-1.5
Please see  ttps://stairway.space/changelog for further information

--- a/changelog.html
+++ b/changelog.html
@@ -26,8 +26,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="CV.html">CV</a></li>
+                        <li><a href="projects.html">Notes & Projects</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -38,13 +37,23 @@
             <h1 class="main-title">Changelog</h1>
             <section>
                 <div class="version-card fade-in">
+                    <h3>Ver. α-1.5</h3>
+                    <span class="changelog-date" style="color: var(--text-muted); font-size: 1rem;"><em>Published: 2/08/26</em></span>
+                    <ul>
+                        <li>Removed CV and Resume pages, moved to PDF links in <a href="index.html">Home</a></li>
+                        <li>Further optimized accessibility and SEO.</li>
+                        <li>Fixed major visual issues with mobile viewing.</li>
+                        <li>Added a page for <a href="projects.html">research notes and project links.</a>
+                    </ul>
+                </div>
+                <div class="version-card fade-in">
                     <h3>Ver. α-1.4</h3>
                     <span class="changelog-date" style="color: var(--text-muted); font-size: 1rem;"><em>Published: 6/15/25</em></span>
                     <ul>
                         <li>Heavy changes to website styling and optimized HTML structure.</li>
                         <li>Improved accessibility and SEO, and enhanced responsive design.</li>
                         <li>Redesigned every page to have modern, visually appealing, and responsive look.</li>
-                        <li>Added stars effect in <a href="index.html">Home</a>, <a href="T.html">About Me</a>, <a href="changelog.html">Changelog</a> and <a href="gallery.html">Gallery</a> pages</li>
+                        <li>Added stars effect in <a href="index.html">Home</a>, <a href="about.html">About Me</a>, <a href="changelog.html">Changelog</a> and <a href="gallery.html">Gallery</a> pages</li>
                         <li>Changed <a href="gallery.html">Gallery</a> to be more uniform photo showcase and added borders</li>
                         <li>Moved to new domain, <a href="https://stairway.space">stairway.space</a> </li>
                     </ul>
@@ -54,8 +63,8 @@
                     <span class="changelog-date" style="color: var(--text-muted); font-size: 1rem;"><em>Published: 4/20/25</em></span>
                     <ul>
                         <li>The <a href="contact.html">Contact page</a> is now working!</li>
-                        <li>Fixed formatting in <a href="CV.html">Extended CV</a> and improved quality and amount of information</li>
-                        <li>Created <a id="message" href="https://damienkoon.com/magrathea.html">Magrathea</a></li>
+                        <li>Fixed formatting in Extended CV and improved quality and amount of information</li>
+                        <li>Created <a id="message" href="https://stairway.space/magrathea.html">Magrathea</a></li>
                     </ul>
                 </div>
                 <div class="version-card fade-in">
@@ -91,7 +100,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; Copyright 2025. All Rights Reserved.</p>
+            <p>&copy; Copyright 2026. All Rights Reserved.</p>
             <p class="footer-changelog"><a href="changelog.html">Changelog</a></p>
         </footer>
     </div>
