--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <title>stairway.space | Contact</title>
-
-
-
+    <link rel="canonical" href="https://stairway.space/contact.html">
     <meta charset="utf-8">
+    <meta name="description" content="Contact Damien Koon for collaboration, research, or speaking opportunities.">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,8 +31,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="CV.html">CV</a></li>
+                        <li><a href="projects.html">Notes & Projects</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="contact.html" aria-current="page">Contact</a></li>
                     </ul>
@@ -59,7 +57,7 @@
                     <form class="contact-form" action="https://formsubmit.co/1dab74b8092e0d1a68580cbe8ef62367" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="https://damienkoon.com/formsubmission.html">
+                        <input type="hidden" name="_next" value="https://stairway.space/formsubmission.html">
                         <input type="hidden" name="_subject" value="New Contact Form Submission">
                         <input type="text" name="_honey" style="display: none">
 
@@ -101,7 +99,7 @@
         </main>
 
         <footer>
-            <p>&copy; Copyright 2025. All Rights Reserved.</p>
+            <p>&copy; Copyright 2026. All Rights Reserved.</p>
             <p class="footer-changelog"><a href="changelog.html">Changelog</a></p>
         </footer>
         
