--- a/formsubmission.html
+++ b/formsubmission.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
     <!-- redirects to homepage after 3 seconds -->
-    <meta http-equiv="refresh" content="3;url=https://damienkoon.com" />
+    <meta http-equiv="refresh" content="3;url=https://stairway.space" />
 </head>
 
 
@@ -29,6 +29,7 @@
             <div class="header-content">
                 <div class="logo-container">
                     <a href="index.html" class="logo-link">
+                        <img src="images/spacestairway.png" alt="stairway.space logo" class="site-logo" style="height:40px; margin-right:10px;" />
                         <span class="logo-text">stairway<span class="dot">.</span>space</span>
                         <span class="logo-subtitle">damien koon</span>
                     </a>
@@ -37,8 +38,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="CV.html">CV</a></li>
+                        <li><a href="projects.html">Notes & Projects</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -63,21 +63,10 @@
             </div>
         </main>
 
-
+        <footer>
+            <p>&copy; Copyright 2026. All Rights Reserved.</p>
+            <p class="footer-changelog"><a href="changelog.html">Changelog</a></p>
+        </footer>
     </div>
-
 </body>
-
-
-
-
-<footer>
-    <p>&copy; Copyright 2025. All Rights Reserved.</p>
-    <p class="footer-changelog"><a href="changelog.html">Changelog</a></p>
-</footer>
-
-
-
-
-
 </html>
