--- a/gallery.html
+++ b/gallery.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>stairway.space | Gallery</title>
-
-
+    <link rel="canonical" href="https://stairway.space/gallery.html">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Photo gallery of Damien Koon: science outreach, space centers, LIGO, observatories, travel in Taiwan and the US, and more.">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;600&family=Emblema+One&family=Space+Grotesk:wght@300;400;600;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
@@ -30,8 +30,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="CV.html">CV</a></li>
+                        <li><a href="projects.html">Notes & Projects</a></li>
                         <li><a href="gallery.html" aria-current="page">Gallery</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -44,72 +43,72 @@
             <div class="gallery-grid">
 
             <figure class="gallery-card">
-                <img src="gallery/KaohsiungSeaCaves.JPG" alt="See Caption">
-                <figcaption>Visting the sea caves in Kaohsiung, Taiwan</figcaption>
+                <img src="gallery/KaohsiungSeaCaves.JPG" alt="Visiting the sea caves in Kaohsiung, Taiwan" loading="lazy" width="300">
+                <figcaption>Visiting the sea caves in Kaohsiung, Taiwan</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/FredHaise.png" alt="See Caption">
+                <img src="gallery/FredHaise.png" alt="Meeting Apollo 13 Lunar Module Pilot Fred Haise">
                 <figcaption>Meeting the Apollo 13 Lunar Module Pilot, Fred Haise</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/NicoleStott.png" alt="See Caption">
+                <img src="gallery/NicoleStott.png" alt="Meeting Space Shuttle astronaut Nicole Stott">
                 <figcaption>Meeting Space Shuttle astronaut, Nicole Stott</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/StennisTestSite.jpg" alt="See Caption">
+                <img src="gallery/StennisTestSite.jpg" alt="Photo with a rocket engine before visiting the Stennis A1 test stand">
                 <figcaption>Photo with a rocket engine right before visiting the Stennis A1 test stand</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/Atlantis.jpeg" alt="See Caption">
+                <img src="gallery/Atlantis.jpeg" alt="Photo with the Space Shuttle Atlantis at Kennedy Space Center Visitor Complex">
                 <figcaption>Photo op with the Space Shuttle Atlantis at the Kennedy Space Center Visitor Complex</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/QixingMountain.JPG" alt="See Caption">
+                <img src="gallery/QixingMountain.JPG" alt="On Qixing Mountain in Taipei, Taiwan">
                 <figcaption>On Qixing mountain in Taipei, Taiwan</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/Einstein.png" alt="See Caption">
+                <img src="gallery/Einstein.png" alt="Sitting with Einstein statue at the Griffith Observatory">
                 <figcaption>Sitting with Einstein at the Griffith Observatory</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/Marathon.jpg" alt="See Caption">
+                <img src="gallery/Marathon.jpg" alt="After finishing first marathon">
                 <figcaption>Trying my best to keep standing after finishing my first marathon</figcaption>
             </figure>
 
             <figure class="gallery-card">
-                <img src="gallery/SpaceCenterHoustonEntrance.png" alt="See Caption">
+                <img src="gallery/SpaceCenterHoustonEntrance.png" alt="At Space Center Houston entrance">
                 <figcaption>Ready to visit Space Center Houston!</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/HoustonEclecticMenageriePark.png" alt="See Caption">
+                <img src="gallery/HoustonEclecticMenageriePark.png" alt="Taking a break in Houston Eclectic Menagerie Park">
                 <figcaption>Taking a break in the Houston, Texas Eclectic Menagerie Park</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/NatrualBridgeCaverns.png" alt="See Caption">
+                <img src="gallery/NatrualBridgeCaverns.png" alt="Exploring Natural Bridge Caverns in San Antonio, Texas">
                 <figcaption>Exploring the Natural Bridge Caverns in San Antonio, Texas</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/LIGO.png" alt="See Caption">
-                <figcaption>Touring the Laser Interferometer Gravitational Waves Observatory (LIGO) in Livingston, Lousianna</figcaption>
+                <img src="gallery/LIGO.png" alt="Touring LIGO in Livingston, Louisiana">
+                <figcaption>Touring the Laser Interferometer Gravitational Waves Observatory (LIGO) in Livingston, Louisiana</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/TotalSolarEclipse.png" alt="See Caption">
+                <img src="gallery/TotalSolarEclipse.png" alt="Preparing for the total solar eclipse of April 2024 in Arkansas">
                 <figcaption>Preparing for the total solar eclipse of April, 2024 in Arkansas</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/Newtonian.png" alt="See Caption">
+                <img src="gallery/Newtonian.png" alt="Holding an 8-inch Newtonian telescope at the Ortega Observatory">
                 <figcaption>Holding an 8 inch Newtonian telescope at the Ortega observatory</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/MichaelMouse.png" alt="See Caption">
+                <img src="gallery/MichaelMouse.png" alt="Posing with The Michael Mouse">
                 <figcaption>Posing with The Michael Mouse 😎</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/CinderellaCastle.png" alt="See Caption">
+                <img src="gallery/CinderellaCastle.png" alt="In front of Cinderella's Castle at Disney World">
                 <figcaption>In front of Cinderella's Castle in Disneyworld</figcaption>
             </figure>
             <figure class="gallery-card">
-                <img src="gallery/StuartLittle.jpg" alt="See Caption">
+                <img src="gallery/StuartLittle.jpg" alt="Visiting Stuart Little statue in Columbus, Ohio">
                 <figcaption>Paying a visit to Stuart Little in Columbus, Ohio</figcaption>
             </figure>
             </div>
@@ -130,7 +129,7 @@
         </main>
 
         <footer>
-            <p>&copy; Copyright 2025. All Rights Reserved.</p>
+            <p>&copy; Copyright 2026. All Rights Reserved.</p>
             <p class="footer-changelog"><a href="changelog.html">Changelog</a></p>
         </footer>
         
